Projeto/Compilador/tests/cases/ok/T57_Const_folding_OR_AND_encadeado.pas
program T56;
var x: integer;
begin
  if (true or false or true) and (true and true) then
    x := 1;
end.
