Projeto/Compilador/tests/cases/error/T8.pas
program T8;
var
  x: integer;
begin
  x := true;
end.
